0.8.0/_sources/generated/statsmodels.discrete.discrete_model.LogitResults.rst.txt
statsmodels.discrete.discrete_model.LogitResults
================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: LogitResults

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~LogitResults.aic
    
    
      ~LogitResults.bic
    
    
      ~LogitResults.bse
    
    
      ~LogitResults.conf_int
    
    
      ~LogitResults.cov_params
    
    
      ~LogitResults.f_test
    
    
      ~LogitResults.fittedvalues
    
    
      ~LogitResults.get_margeff
    
    
      ~LogitResults.initialize
    
    
      ~LogitResults.llf
    
    
      ~LogitResults.llnull
    
    
      ~LogitResults.llr
    
    
      ~LogitResults.llr_pvalue
    
    
      ~LogitResults.load
    
    
      ~LogitResults.normalized_cov_params
    
    
      ~LogitResults.pred_table
    
    
      ~LogitResults.predict
    
    
      ~LogitResults.prsquared
    
    
      ~LogitResults.pvalues
    
    
      ~LogitResults.remove_data
    
    
      ~LogitResults.resid_dev
    
    
      ~LogitResults.resid_generalized
    
    
      ~LogitResults.resid_pearson
    
    
      ~LogitResults.resid_response
    
    
      ~LogitResults.save
    
    
      ~LogitResults.summary
    
    
      ~LogitResults.summary2
    
    
      ~LogitResults.t_test
    
    
      ~LogitResults.tvalues
    
    
      ~LogitResults.wald_test
    
    
      ~LogitResults.wald_test_terms
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~LogitResults.use_t
   
   