v0.13.5/_sources/generated/statsmodels.discrete.discrete_model.LogitResults.rst.txt
statsmodels.discrete.discrete\_model.LogitResults
=================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: LogitResults
   :exclude-members: conf_int,cov_params,f_test,get_margeff,initialize,load,normalized_cov_params,pred_table,predict,remove_data,save,set_null_options,summary,summary2,t_test,t_test_pairwise,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~LogitResults.conf_int
      ~LogitResults.cov_params
      ~LogitResults.f_test
      ~LogitResults.get_margeff
      ~LogitResults.initialize
      ~LogitResults.load
      ~LogitResults.normalized_cov_params
      ~LogitResults.pred_table
      ~LogitResults.predict
      ~LogitResults.remove_data
      ~LogitResults.save
      ~LogitResults.set_null_options
      ~LogitResults.summary
      ~LogitResults.summary2
      ~LogitResults.t_test
      ~LogitResults.t_test_pairwise
      ~LogitResults.wald_test
      ~LogitResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~LogitResults.aic
      ~LogitResults.bic
      ~LogitResults.bse
      ~LogitResults.fittedvalues
      ~LogitResults.llf
      ~LogitResults.llnull
      ~LogitResults.llr
      ~LogitResults.llr_pvalue
      ~LogitResults.prsquared
      ~LogitResults.pvalues
      ~LogitResults.resid_dev
      ~LogitResults.resid_generalized
      ~LogitResults.resid_pearson
      ~LogitResults.resid_response
      ~LogitResults.tvalues
      ~LogitResults.use_t
   
   
   